--- a/1204-taiwan.Rmd
+++ b/1204-taiwan.Rmd
@@ -155,7 +155,7 @@ Conduct basic PCA of one chrom.
 m103$Region<-factor(m103$Region, levels=c("Queensland","Northern Territory","Papua New Guinea","Mainstream","OceanPick",
                                            "Indonesia-K","Indonesia-SU","Indonesia-SJ","Philippines","Taiwan",
                                               "Vietnam","Cambodia","Thailand", "Bangladesh",
-                                              "India Eastern Coast","Sri Lanka","India Western Coast"))
+                                              "India East Coast","Sri Lanka","India West Coast"))
 
 m103 %>% select(NewPath) %>% write_tsv("bamlists/103.bamlist", col_names = FALSE)
 meta<-m103
@@ -525,7 +525,15 @@ srun -t 72:00:00 -p high --mem=32G --nodes=1 --ntasks-per-node=1 --cpus-per-task
 -minMaf 0.05 -minMapQ 20 -minQ 20 -GL 1 -doMajorMinor 1 -doMaf 1 -SNP_pval 1e-6 \
 -doGeno 2 -doPost 1 -postCutoff 0.9 -doPlink 2  > outputs/1204/snps-wgs.out 2> outputs/1204/snps-wgs.err &
 
+
+srun -t 72:00:00 -p high --mem=32G --nodes=1 --ntasks-per-node=1 --cpus-per-task=12 $HOME/angsd/angsd -nthreads 12 \
+-minInd 93 -bam bamlists/103.bamlist -ref genome/GCF_001640805.2_TLL_Latcal_v3_genomic.fna \
+-rf  meta/no-inv.txt -out outputs/1204/snps-wgs-01  \
+-minMaf 0.01 -minMapQ 20 -minQ 20 -GL 1 -doMajorMinor 1 -doMaf 1 -SNP_pval 1e-6 \
+-doGeno 2 -doPost 1 -postCutoff 0.9 -doPlink 2  > outputs/1204/snps-wgs-01.out 2> outputs/1204/snps-wgs-01.err &
+
 ```
+
 
 
 inversion genotypes from all three regions
@@ -564,7 +572,7 @@ m64<-m103 %>% filter(! Region %in% c("OceanPick","Mainstream","Northern Territor
 
 m64 %>% select(Run) %>% write_tsv("bamlists/64-sample-names.txt", col_names = FALSE)
 
-m41<-m103 %>% filter(! Region %in% c("OceanPick","Mainstream","Northern Territory","Papua New Guinea","Queensland","Bangladesh","Sri Lanka","India Eastern Coast","India Western Coast")) 
+m41<-m103 %>% filter(! Region %in% c("OceanPick","Mainstream","Northern Territory","Papua New Guinea","Queensland","Bangladesh","Sri Lanka","India East Coast","India West Coast")) 
 
 m41 %>% select(Run) %>% write_tsv("bamlists/41-sample-names.txt", col_names = FALSE)
 
@@ -576,11 +584,18 @@ plink --ped plink-binary.ped --map plink-binary.map --recode vcf --allow-extra-c
 bgzip plink.vcf 
 tabix plink.vcf.gz
 
+#6628039 variants
+
+plink --tped snps-wgs-01.tped --tfam snps-wgs-01.tfam  --out plink-binary-01 --recode --allow-extra-chr --noweb
+plink --ped plink-binary-01.ped --map plink-binary-01.map --recode vcf --allow-extra-chr -out plink-01
+bgzip plink-01.vcf 
+tabix plink-01.vcf.gz
 
 #renaming vcf bcftools/1.13
 module load bcftools
 
 bcftools reheader --samples bamlists/103-sample-names.txt -o outputs/1204/renamed.vcf.gz outputs/1204/plink.vcf.gz
+bcftools reheader --samples bamlists/103-sample-names.txt -o outputs/1204/renamed-01.vcf.gz outputs/1204/plink-01.vcf.gz
 
 bcftools view -S bamlists/64-sample-names.txt outputs/1204/renamed.vcf.gz > outputs/1204/64.vcf
 bcftools view -S bamlists/41-sample-names.txt outputs/1204/renamed.vcf.gz > outputs/1204/41.vcf
@@ -604,6 +619,12 @@ bcftools +fill-tags outputs/1204/renamed.vcf.gz  -- -t MAF,F_MISSING | bcftools 
 bcftools +fill-tags outputs/1204/renamed.vcf.gz  -- -t MAF,F_MISSING | bcftools view -i 'F_MISSING < 0.05' | bcftools view -i 'INFO/MAF > 0.01' | bcftools view -i 'INFO/MAF < 0.45' |  bcftools +prune -m 0.20 -w 50kb --nsites-per-win 1 --nsites-per-win-mode rand  > outputs/1204/pruned-maf01-45.vcf
 
 bcftools +fill-tags outputs/1204/renamed.vcf.gz  -- -t MAF,F_MISSING | bcftools view -i 'F_MISSING < 0.05' | bcftools view -i 'INFO/MAF > 0.01' | bcftools view -i 'INFO/MAF < 0.40' |  bcftools +prune -m 0.20 -w 50kb --nsites-per-win 1 --nsites-per-win-mode rand  > outputs/1204/pruned-maf01-04.vcf
+
+
+#Using random seed: 1738276351
+bcftools +fill-tags outputs/1204/renamed-01.vcf.gz  -- -t MAF,F_MISSING | bcftools view -i 'F_MISSING < 0.05' | bcftools view -i 'INFO/MAF > 0.01' | bcftools view -i 'INFO/MAF < 0.45' |  bcftools +prune -m 0.20 -w 50kb --nsites-per-win 1 --nsites-per-win-mode rand  > outputs/1204/pruned-01-maf01-45.vcf
+
+
 ```
 
 	-> Number of sites retained after filtering: 1850831 
@@ -633,6 +654,10 @@ conda deactivate;
 conda activate py2;
 ~/github/mccloud-rrt/vcf2phylip.py -i pruned-maf01-45.vcf;
 conda deactivate;
+
+conda activate py2;
+~/github/mccloud-rrt/vcf2phylip.py -i pruned-01-maf01-45.vcf;
+conda deactivate;
 ```{r}
 dat<-read.dna(file="outputs/1204/pruned.min4.phy")
 write.nexus.data(dat, file="outputs/1204/pruned.nex")
@@ -653,11 +678,14 @@ write.nexus.data(dat, file="outputs/1204/pruned-maf10-04.nex")
 dat<-read.dna(file="outputs/1204/pruned-maf01-45.min4.phy")
 write.nexus.data(dat, file="outputs/1204/pruned-maf01-45.nex")
 
+dat<-read.dna(file="outputs/1204/pruned-01-maf01-45.min4.phy")
+write.nexus.data(dat, file="outputs/1204/pruned-01-maf01-45.nex")
+
 ```
 
 
 ```{r}
-path_to_file <- "outputs/1204/pruned-maf01-45.vcf"
+path_to_file <- "outputs/1204/pruned-01-maf01-45.vcf"
 filename <- read.pcadapt(path_to_file, type = "vcf")
 ```
 
@@ -690,7 +718,7 @@ plot(x, option = "scores", pop = factor(m$Region, levels=c("Northern Territory",
                                                            "Indonesia-SJ",
                                                            
                                       "Philippines","Taiwan","Vietnam","Cambodia","Thailand","Bangladesh","Sri Lanka",
-                                              "India Eastern Coast","India Western Coast"))) 
+                                              "India East Coast","India West Coast"))) 
  
 ```
 
@@ -703,9 +731,35 @@ pcadata<-pcadata %>% bind_cols(m)
 ```
 
 ```{r}
+ggplot(pcadata) +
+  geom_point(aes(x=V1, y=V2, shape=Lineage, fill=Region), alpha=0.95) +
+  geom_text_repel(data=pcadata %>% filter(Region %in% c("Cambodia")), aes(x=V1, y=V2,label=Run)) +
+  scale_shape_manual(values=c(21,23,23,22,22,24)) + 
+  scale_fill_viridis_d(option="H") +
+  guides(fill = guide_legend(override.aes = list(pch = 22))) +
+  theme_bw() +
+  theme(legend.position = "none") +
+  theme(panel.grid = element_blank()) +
+  xlab("PC 1") +
+  ylab("PC 2") 
+
+ggplot(pcadata) +
+  geom_point(aes(x=V1, y=V4, shape=Lineage, fill=Region), alpha=0.95) +
+  geom_text_repel(data=pcadata %>% filter(Region %in% c("Queensland")), aes(x=V1, y=V4,label=Run)) +
+  scale_shape_manual(values=c(21,23,23,22,22,24)) + 
+  scale_fill_viridis_d(option="H") +
+  guides(fill = guide_legend(override.aes = list(pch = 22))) +
+  theme_bw() +
+  theme(legend.position = "none") +
+  theme(panel.grid = element_blank()) +
+  xlab("PC 1") +
+  ylab("PC 2") 
+```
+
+```{r}
 pcb<-ggplot(pcadata) +
   geom_point(aes(x=V1, y=V2, shape=Lineage, fill=Region), alpha=0.95) +
-  scale_shape_manual(values=c(21,23,23,21,21,24)) + 
+  scale_shape_manual(values=c(21,23,23,22,22,24)) + 
   scale_fill_viridis_d(option="H") +
   guides(fill = guide_legend(override.aes = list(pch = 22))) +
   theme_bw() +
@@ -722,7 +776,7 @@ pcb<-ggplot(pcadata) +
 pcc<-ggplot(pcadata) +
   geom_point(aes(x=V1, y=V3, shape=Lineage, fill=Region), alpha=0.9) +
 #  geom_text_repel(data=labels13, aes(x=x, y=y, label=Region))+
-  scale_shape_manual(values=c(21,23,23,21,21,24)) + 
+  scale_shape_manual(values=c(21,23,23,22,22,24)) + 
   scale_fill_viridis_d(option="H") +
   guides(fill = guide_legend(override.aes = list(pch = 22))) +
   theme_bw() +
@@ -737,7 +791,7 @@ pcc<-ggplot(pcadata) +
 pcd<-ggplot(pcadata) +
   geom_point(aes(x=V1, y=V4, shape=Lineage, fill=Region), alpha=0.9) +
 #  geom_text_repel(data=labels13, aes(x=x, y=y, label=Region))+
-  scale_shape_manual(values=c(21,23,23,21,21,24)) + 
+  scale_shape_manual(values=c(21,23,23,22,22,24)) + 
   scale_fill_viridis_d(option="H") +
   guides(fill = guide_legend(override.aes = list(pch = 22))) +
   theme_bw() +
@@ -755,7 +809,7 @@ blank <- grid.rect(gp=gpar(col="white"))
 
 
 ```{r}
-a<-ggplotGrob(ggarrange(panela, pcb, blank, ncol=3, widths=c(1,1.4,.5)))
+a<-ggplotGrob(ggarrange(panela, pcb, blank, ncol=3, widths=c(1,1.2,.5)))
 bc<-ggplotGrob(ggarrange(pcc, pcd, ncol=2, widths=c(1,1.4)))
 ggarrange(a,bc, ncol=1, heights=c(1,1))
 
@@ -775,6 +829,10 @@ iqtree2 -nt AUTO -s pruned-maf05-04.min4.phy.varsites.phy -T AUTO -st DNA -m MFP
 
 iqtree2 -s pruned-maf01-45.min4.phy -st DNA -m GTR+ASC -bb 1000 --redo
 iqtree2 -nt AUTO -s pruned-maf01-45.min4.phy.varsites.phy -T AUTO -st DNA -m MFP+ASC -bb 10000 --redo
+
+iqtree2 -s pruned-01-maf01-45.min4.phy -st DNA -m GTR+ASC -bb 1000 --redo
+iqtree2 -nt AUTO -s pruned-01-maf01-45.min4.phy.varsites.phy -T AUTO -st DNA -m MFP+ASC -bb 10000 --redo
+(only 1461 variant sites)
 
 Phylogeny has better resolution by letting low variants (MAF 0.01) be present
 ```{r}
@@ -831,6 +889,8 @@ Network
 
 ```{r}
 net<-read.nexus.networx("outputs/1204/pruned-maf01-45-network.nex")
+net<-read.nexus.networx("outputs/1204/pruned-01-maf01-45-network.nex")
+
 ```
 
 ```{r}
@@ -839,19 +899,34 @@ g$data<-left_join(g$data, m, by=c("label"="Run"))
 
 n<-g + 
   geom_tippoint(aes(shape=Lineage, fill=Region), cex=5, alpha=1.00) +
+  geom_tiplab2(aes(label=Region)) +
   scale_shape_manual(values=c(21,23,23,21,21,24)) + 
   scale_fill_viridis_d(option="H") +
-  guides(fill = guide_legend(override.aes = list(pch = 22)))
+  guides(fill = guide_legend(override.aes = list(pch = 22))) +
+  theme(legend.position = "none")
 
 n
 ggsave("outputs/1204/wgs-network.jpeg", width=12, height=8)
 ggsave("outputs/1204/wgs-network.pdf", width=12, height=8)
 
+o<-g + 
+  geom_tippoint(aes(shape=Lineage, fill=Region), cex=5, alpha=1.00) +
+  geom_tiplab2() +
+  scale_shape_manual(values=c(21,23,23,21,21,24)) + 
+  scale_fill_viridis_d(option="H") +
+  guides(fill = guide_legend(override.aes = list(pch = 22))) +
+  theme(legend.position = "none")
+
+o
+
+ggsave("outputs/1204/wgs-network-ind-id.jpeg", width=12, height=8)
+ggsave("outputs/1204/wgs-network-ind-id.pdf", width=12, height=8)
+
 ```
 
 
 ```{r}
-tree<-read.tree("outputs/1204/pruned-64.min4.phy.varsites.phy.contree")
+tree<-read.tree("outputs/1204/pruned-01-maf01-45.min4.phy.varsites.phy.contree")
 t1<-ggtree(tree) + geom_nodelab(aes(label=node))
 t1
 ```
@@ -907,40 +982,38 @@ ms$Region<-gsub(" ","-", ms$Region)
 ms$Region<-factor(ms$Region, levels=c("Queensland","Northern-Territory","Papua-New-Guinea","Mainstream","OceanPick",
                                            "Indonesia-K","Indonesia-SJ","Indonesia-SU","Philippines","Taiwan",
                                               "Vietnam","Cambodia","Thailand", "Bangladesh","Sri-Lanka",
-                                              "India-Eastern-Coast","India-Western-Coast"))
+                                              "India-East-Coast","India-West-Coast"))
 ```
 
 
 
 ```{r}
 m<-ms
-vcf <-read.vcfR("outputs/1204/pruned-maf10-04.vcf") # from recalled and pruned snps in 1200
+vcf <-read.vcfR("outputs/1204/pruned-01-maf01-45.vcf") # from recalled and pruned snps in 1200
 gl<-vcfR2genlight(vcf)
 gl$pop<-as.factor(m$Region)
-```
 
-
-```{r}
 glx<-gl
 glx <- gl.compliance.check(glx) 
 
-gl3<-gl.filter.maf(glx, threshold = 0.1)
+gl3<-gl.filter.maf(glx, threshold = 0.05)
 gl3<-gl.filter.allna(gl3)
 gl3
 ```
 
 
 
-```{r}
+```{r} 
 snp<-import.snpR.data(gl3)
 ```
+
 
 ```{r}
 structure<-plot_structure(snp, facet=c("pop"), facet.order = c("Queensland","Northern-Territory","Papua-New-Guinea","Mainstream","OceanPick",
                                            "Indonesia-K","Indonesia-SU","Indonesia-SJ","Philippines","Taiwan",
                                               "Vietnam","Cambodia","Thailand", "Bangladesh","Sri-Lanka",
-                                              "India-Eastern-Coast","India-Western-Coast"),
-               k=c(1,2,3,4,5,6))
+                                              "India-East-Coast","India-West-Coast"),
+               k=c(1,2,3,4,5,6), )
 ```
 
 This plot is influenced by MAF 0.01 vs 0.05 vs 0.1
@@ -949,6 +1022,102 @@ This plot is influenced by MAF 0.01 vs 0.05 vs 0.1
 structure$plot
 
 ggsave("outputs/1204/all-samples-genome-wide-admix-plot.pdf", height=10, width=16)
+```
+
+Structure scores
+
+
+```{r}
+edf<-structure$K_plot %>% as_tibble()
+
+ggplot(edf) +
+  geom_line(aes(x=k, y=Cross.Entropy)) +
+  theme_bw() +
+  ylab("Cross Entropy") +
+  xlab("K Genetic Clusters") +
+  theme(panel.grid = element_blank()) +
+  scale_x_continuous(limits = c(2,6), breaks = c(2,3,4,5,6)) +
+  theme(axis.title = element_text(size=14))
+
+ggsave("outputs/1204/all-samples-genome-wide-admix-plot-entropy-scores.pdf")
+```
+
+
+```{r}
+np<-as_tibble(structure$plot_data)
+np$pop<-factor(np$pop, levels=c("Queensland","Northern-Territory","Papua-New-Guinea","Mainstream","OceanPick",
+                                           "Indonesia-K","Indonesia-SU","Indonesia-SJ","Philippines","Taiwan",
+                                              "Vietnam","Cambodia","Thailand", "Bangladesh","Sri-Lanka",
+                                              "India-East-Coast","India-West-Coast"))
+
+write_csv(np %>% filter(K == "K = 4"), file="outputs/1204/k4.csv")
+write_csv(np %>% filter(K == "K = 5"), file="outputs/1204/k5.csv")
+
+np2<-np %>% filter(pop %in% c("OceanPick","Taiwan","Cambodia")) 
+
+labs<-np2 %>% select(ID,sampID) %>% unique()
+
+ggplot(np2 %>% filter(K == "K = 4")) +
+  geom_bar(aes(x=ID, y=Percentage, fill=Cluster), stat = 'identity') +
+  scale_x_discrete(labels = labs$sampID) +
+
+ # facet_grid(cols = vars(pop), scales = "free_x", space = "free_x") +
+  theme_bw() +
+  theme(panel.grid = element_blank()) +
+  scale_fill_viridis_d(option="H") +
+  theme(axis.text.x=element_text(angle=45, hjust=1, vjust=1)) 
+
+
+ggsave("outputs/1204/k4.pdf", width=18, height=8)
+
+```
+
+### Admixture
+
+"outputs/1204/pruned-01-maf01-45.vcf"
+
+bcftools view pruned-01-maf01-45.vcf.gz NC_066833.1  > lg01.vcf
+convert to plink, and convert some more
+plink --vcf lg01.vcf --make-bed --out myplink --allow-extra-chr --noweb
+plink -bfile myplink --recode12 -out myplink2 --allow-extra-chr --noweb
+
+plink --vcf pruned-01-maf01-45.vcf.gz --make-bed --out myplink --allow-extra-chr --noweb
+plink -bfile myplink --recode12 -out myplink2 --allow-extra-chr --noweb
+(base) ➜  1204 git:(main) ✗ ~/github/admixture/admixture myplink2.ped 2                                             
+
+no in subdir admixture
+
+```{sh, eval=FALSE}
+for K in 1 2 3 4 5; \
+do ~/github/admixture/admixture --cv myplink2.ped $K | tee log${K}.out; done
+```
+
+```{r}
+tbl=read.table("outputs/1204/admixture/myplink2.2.Q")
+admix<-m103 %>% bind_cols(tbl)
+```
+
+
+
+```{r}
+snpad<-snp
+
+snpad@snp.meta<-snpad@snp.meta %>% mutate(chr=gsub("_\\d+$","",snpID))  %>%
+  mutate(position=gsub("NC_.+\\.\\d_","",snpID))
+snpad@snp.meta$position<-as.numeric(snpad@snp.meta$position)
+snpad@snp.meta
+```
+
+```{r}
+admix<-plot_structure(snpad,  method = "admixture", admixture_path = "/Users/mac/github/admixture/")
+admix$plot
+
+```
+method = "admixture",  admixture_path="/Users/mac/github/admixture/admixture", facet=c("pop"), facet.order = c("Queensland","Northern-Territory","Papua-New-Guinea","Mainstream","OceanPick",
+                                           "Indonesia-K","Indonesia-SU","Indonesia-SJ","Philippines","Taiwan",
+                                              "Vietnam","Cambodia","Thailand", "Bangladesh","Sri-Lanka",
+                                              "India-East-Coast","India-West-Coast"),
+               k=c(1,2,3,4,5,6), )
 ```
 
 ## 41 or 64 Samples
@@ -987,7 +1156,7 @@ plot(x, option = "scores", pop = factor(m$Region, levels=c("Northern Territory",
                                                            "Indonesia-SJ",
                                                            
                                       "Philippines","Taiwan","Vietnam","Cambodia","Thailand","Bangladesh","Sri Lanka",
-                                              "India Eastern Coast","India Western Coast"))) 
+                                              "India East Coast","India West Coast"))) 
  
 ```
 
@@ -1067,7 +1236,7 @@ snp<-import.snpR.data(gl3)
 ```{r}
 structure<-plot_structure(snp, facet=c("pop"), facet.order = c(                            "Indonesia-K","Indonesia-SU","Indonesia-SJ","Philippines","Taiwan",
                                               "Vietnam","Cambodia","Thailand","Bangladesh",
-                                              "India-Eastern-Coast","Sri-Lanka","India-Western-Coast"),
+                                              "India-East-Coast","Sri-Lanka","India-West-Coast"),
                k=c(2,3,4,5,6))
 ```
 
